fix: mobile button and title fix

--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -3,6 +3,10 @@
     bottom: 8%;
     position: absolute;
 
+    @include respond-max($bp-mob) {
+      bottom: 3.75%;
+    }
+
     a {
       display: inline-block;
       position: relative;
