--- a/src/styles/thanks-page.scss
+++ b/src/styles/thanks-page.scss
@@ -1,3 +1,12 @@
+#outro-scene-wrapper {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .mail-signup {
   display: flex;
   flex-direction: column;
@@ -106,6 +115,6 @@
     padding-top: 10%;
   }
   @include respond-max($bp-mob) {
-    padding-top: 35%;
+    padding-top: 25%;
   }
 }
