--- a/src/styles/image-well.scss
+++ b/src/styles/image-well.scss
@@ -56,8 +56,9 @@
     color: #0b8639;
   }
   .images-palette {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    // transform: scale(1.5);
   }
   .targetClass {
     position: absolute;
@@ -135,7 +136,7 @@
       }
       &.bw-poster.inactive-card {
         left: 77%;
-        top: -30%;
+        top: -33%;
       }
       &.hw-poster.inactive-card {
         left: 37%;
@@ -1026,8 +1027,8 @@
         }
 
         &.inactive-card {
-          left: 15%;
-          top: -20%;
+          left: 2%;
+          top: -30%;
         }
       }
 
