--- a/src/styles/thanks-page.scss
+++ b/src/styles/thanks-page.scss
@@ -3,7 +3,7 @@
   width: 100vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -105,11 +105,7 @@
 }
 
 .outro-container-spacing {
-  padding-top: 2%;
-
-  @include respond-max($bp-lg-desk) {
-    padding-top: 5%;
-  }
+  padding-top: 8%;
 
   @include respond-max($bp-tab) {
     padding-top: 10%;
