feat: transition delay for asian women and illustrators

--- a/src/styles/image-well.scss
+++ b/src/styles/image-well.scss
@@ -153,8 +153,8 @@
         left: 20%;
         top: 35%;
         transform: translate(-50%, -50%);
-        // transform: scale(0.7) translate(-50%, -50%);
         height: 308px;
+        transition-delay: 0.025s;
 
         @include respond-max($bp-desk) {
           height: 268px;
@@ -177,8 +177,8 @@
         }
 
         &.inactive-card {
-          left: -7%;
-          top: -14%;
+          left: 5%;
+          top: -20%;
         }
       }
 
@@ -187,6 +187,7 @@
         top: 68%;
         z-index: 2;
         height: 253px;
+        transition-delay: calc(0.025s * 2);
 
         @include respond-max($bp-desk) {
           height: 235px;
@@ -215,7 +216,7 @@
 
         &.inactive-card {
           left: -6%;
-          top: -58%;
+          top: -20%;
         }
       }
 
@@ -224,6 +225,7 @@
         top: 73.5%;
         z-index: 0;
         height: 462px;
+        transition-delay: calc(0.025s * 3);
 
         @include respond-max($bp-desk) {
           height: 428px;
@@ -252,7 +254,7 @@
 
         &.inactive-card {
           left: 30%;
-          top: 123%;
+          top: 120%;
         }
       }
 
@@ -261,6 +263,7 @@
         top: 35%;
         transform: translate(-50%, -50%);
         height: 260px;
+        transition-delay: calc(0.025s * 4);
 
         @include respond-max($bp-desk) {
           height: 240px;
@@ -299,6 +302,7 @@
         transform: translate(-50%, -50%);
         z-index: 2;
         height: 339px;
+        transition-delay: calc(0.025s * 5);
 
         @include respond-max($bp-desk) {
           height: 314px;
@@ -327,7 +331,7 @@
 
         &.inactive-card {
           bottom: -45%;
-          right: -30%;
+          right: -20%;
         }
       }
 
@@ -336,6 +340,7 @@
         right: 0%;
         z-index: 0;
         height: 270px;
+        transition-delay: calc(0.025s * 6);
 
         @include respond-max($bp-desk) {
           height: 250px;
@@ -364,7 +369,7 @@
 
         &.inactive-card {
           bottom: -28%;
-          right: -30%;
+          right: -20%;
         }
       }
     }
@@ -374,6 +379,7 @@
         left: 28%;
         top: 29%;
         height: 200px;
+        transition-delay: 0.025s;
 
         @include respond-max($bp-desk) {
           height: 185px;
@@ -405,6 +411,7 @@
         left: 13%;
         top: 36%;
         height: 210px;
+        transition-delay: calc(0.025s * 2);
 
         @include respond-max($bp-desk) {
           height: 195px;
@@ -436,6 +443,7 @@
         left: 72%;
         top: 58%;
         height: 218px;
+        transition-delay: calc(0.025s * 3);
 
         @include respond-max($bp-desk) {
           height: 202px;
@@ -467,6 +475,7 @@
         right: 18%;
         top: 83%;
         height: 193.26px;
+        transition-delay: calc(0.025s * 4);
 
         @include respond-max($bp-desk) {
           height: 179px;
@@ -498,6 +507,7 @@
         left: 32%;
         bottom: 36%;
         height: 142.52px;
+        transition-delay: calc(0.025s * 5);
 
         @include respond-max($bp-desk) {
           height: 132px;
@@ -528,6 +538,7 @@
         bottom: -1%;
         left: 19%;
         height: 190px;
+        transition-delay: calc(0.025s * 6);
 
         @include respond-max($bp-desk) {
           height: 176px;
@@ -559,6 +570,7 @@
         left: 17%;
         top: 59%;
         height: 174px;
+        transition-delay: calc(0.025s * 7);
 
         @include respond-max($bp-desk) {
           height: 161px;
@@ -589,6 +601,7 @@
         left: 72%;
         top: 31%;
         height: 258px;
+        transition-delay: calc(0.025s * 8);
 
         @include respond-max($bp-desk) {
           height: 238px;
@@ -620,6 +633,7 @@
         right: 1%;
         bottom: 6%;
         height: 167px;
+        transition-delay: calc(0.025s * 9);
 
         @include respond-max($bp-desk) {
           height: 154px;
@@ -650,6 +664,7 @@
         top: 42%;
         right: 6%;
         height: 194px;
+        transition-delay: calc(0.025s * 10);
 
         @include respond-max($bp-desk) {
           height: 179px;
