--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -84,6 +84,13 @@ main {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+
+  &.intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 // large page titles
@@ -248,9 +255,6 @@ main {
     @include respond-max($bp-lg-lap) {
       font-size: 69px;
     }
-    // @include respond-max($bp-lap) {
-    //   font-size: 69px;
-    // }
 
     @include respond-max($bp-tab) {
       letter-spacing: -1.38;
